# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: lint.yaml
page_analyzer/: __init__.py  app.py  url_repository.py  utilities.py
page_analyzer/templates/: index.html  layout.html  url.html  urls.html
